deployment/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sso
spec:
  hosts:
  - sso
  http:
  - route:
    - destination:
        host: sso
        subset: v2
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sso
spec:
  host: sso
  trafficPolicy:
    tls:
      mode: DISABLE
  subsets:
  - name: v2
    labels:
      version: v2
---
