deployment/sso-gt.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sso-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sso-sg
spec:
  hosts:
  - "*"
  gateways:
  - sso-gateway
  http:
  - match:
    - uri:
        prefix: /sso/
    rewrite:
      uri: /

    route:
    - destination:
        port:
          number: 8080
        host: sso
